# lang-api

./: .gitignore  Cargo.toml  README.md  build.rs
client/: Cargo.toml
client/src/: lang_api.rs  main.rs  models.rs
data/: features.json  personal-pronouns.json
data/de/: verbs.json
data/en/: verbs.json
data/language-families/: african.json  americas.json  arctic.json  austronesian.json  caucasus.json  central-asian.json  european.json  middle-east.json  oceania.json  south-asia.json  southeast-asian.json
src/: main.rs  models.rs  state.rs  utils.rs
src/data/: features.rs  mod.rs  pronouns.rs  seed.rs  verbs.rs
src/models/: language.rs  mod.rs  personal_pronouns.rs  verb.rs
src/routes/: builder.rs  dictionary.rs  features.rs  language.rs  mod.rs  pronouns.rs  verbs.rs
