[package]
name = "lang-api-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"

[dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
strum = "0.27.2"
anyhow = "1.0.100"